<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <!-- Photo -->
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/profile"
            android:src="@drawable/myphoto"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="26dp"/>

        <!-- Nama -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/owner_name"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginBottom="2dp"/>

        <!-- Email -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/owner_email"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginBottom="25dp"/>

        <!-- Jenis Data: Proyek Terbaru -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/owner_project"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/owner_desc"
            android:textSize="14sp"
            android:justificationMode="inter_word"
            android:textColor="@color/colorSubtitle"
            android:layout_marginBottom="15dp"
            tools:ignore="UnusedAttribute" />

        <!-- Pendidikan -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/owner_study"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/owner_prodi"
            android:textSize="14sp"
            android:textColor="@color/colorSubtitle"
            android:layout_marginBottom="15dp"/>

        <!-- Jenis Data: Sertifikasi (Tabel) -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/owner_bangkit"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:layout_marginBottom="20dp">

            <!-- Header Row -->
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/path"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:background="@color/colorBackground"
                    android:padding="8dp"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:background="@color/colorBackground"
                    android:padding="8dp"
                    android:textSize="14sp"/>
            </TableRow>

            <!-- Row 1 -->
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cc_path"
                    android:textColor="@color/colorSubtitle"
                    android:padding="8dp"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year1"
                    android:textColor="@color/colorSubtitle"
                    android:padding="8dp"
                    android:textSize="14sp"/>
            </TableRow>

            <!-- Row 2 -->
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/md_path"
                    android:textColor="@color/colorSubtitle"
                    android:padding="8dp"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year2"
                    android:textColor="@color/colorSubtitle"
                    android:padding="8dp"
                    android:textSize="14sp"/>
            </TableRow>
        </TableLayout>

        <!-- Button Share -->
        <Button
            android:id="@+id/action_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/btn_share"
            android:radius="4dp"
            android:foreground="?attr/selectableItemBackground"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>
</ScrollView>
